--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,6 @@
     <dimen name="card_photo_margin_start">16dp</dimen>
 
     <dimen name="profile_card_common_text_size">14sp</dimen>
+
+    <dimen name="common_edit_text_padding">23dp</dimen>
 </resources>
